# dotnvim-bridge

./: .env.example  .gitignore  .gitmodules  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml
docs/: architecture.md  capability-boundary.md  core-requirements.md  debug-recipes.md  development-tooling.md  notes-three-layer-lua-tool-architecture.md  project-assessment.md  roadmap.md  setup.md
examples/: codex-config.toml
openspec/changes/add-wrapper-nvim-mcp-with-pinned-upstream/: design.md  proposal.md  tasks.md
openspec/changes/add-wrapper-nvim-mcp-with-pinned-upstream/specs/pinned-upstream-nvim-wrapper/: spec.md
scripts/: test-nvim-mcp-endpoint
src/dotnvim_bridge/: __init__.py  __main__.py  errors.py  limits.py  lua_snippets.py  schemas.py  server.py  session.py  settings.py
src/dotnvim_bridge/tools/: __init__.py  debug_snapshot.py  health.py  logs.py  lsp.py  messages.py
tests/: test_dependency_pin.py  test_limits.py  test_live_integration.py  test_session_boundaries.py  test_tools.py
tests/fixtures/: sample_responses.py
