[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "dotnvim-bridge"
version = "0.1.0"
description = "Agent-side Neovim MCP bridge with high-level debug tools"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [{ name = "vex9z7" }]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Typing :: Typed",
]
dependencies = [
    "mcp[cli]",
    "nvim-mcp==1.0.0",
]

[project.scripts]
dotnvim-bridge = "dotnvim_bridge.server:main"

[project.urls]
Homepage = "https://github.com/vex9z7/dotnvim-bridge"
Repository = "https://github.com/vex9z7/dotnvim-bridge"

[dependency-groups]
dev = [
    "basedpyright",
    "pre-commit",
    "pytest",
    "pytest-asyncio",
    "pytest-cov",
    "ruff",
]

[tool.hatch.build.targets.wheel]
packages = ["src/dotnvim_bridge"]

[tool.hatch.build.targets.sdist]
include = [
    "/src",
    "/tests",
    "/docs",
    "/examples",
    "/scripts",
    "/openspec",
    "/README.md",
    "/LICENSE",
    "/pyproject.toml",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["E501"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"

[tool.basedpyright]
include = ["src", "tests"]
pythonVersion = "3.10"
typeCheckingMode = "basic"
reportMissingTypeStubs = false
reportUnknownMemberType = false
reportUnknownVariableType = false
reportUnknownArgumentType = false
reportAny = false
